kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
spec:
  selector:
    matchLabels:
      app: my-pod
  replicas: 3
  template:
    metadata:
      labels:
        app: my-pod
    spec:
      containers:
      - name: my-container
        image: gregorus/hw-4:latest
        ports:
        - containerPort: 3000
