kubernetes/http-liveness.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    test: liveness
  name: liveness-http
spec:
  containers:
  - name: liveness
    image: registry.k8s.io/liveness
    args:
    - /server
    livenessProbe:
      httpGet:
        host: 10.99.76.36
        path: /
        port: 80
      initialDelaySeconds: 3
      periodSeconds: 3
